# yolov5_tinytrt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
